Update k8s manifests to provide special email on prod

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -98,7 +98,7 @@ spec:
                 configMapKeyRef:
                   name: sendgrid-config
                   key: sender-email
-            - name: SENDGRID_INTERNAL_NOTIFICATIONS_EMAIL
+            - name: SENDGRID_INTERNAL_EMAIL
               valueFrom:
                 configMapKeyRef:
                   name: sendgrid-config
