--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "faker": "^5.5.3",
     "husky": "7.0.2",
     "jest": "27.2.1",
-    "jest-extended": "0.11.5",
-    "jest-mock-extended": "2.0.2-beta2",
+    "jest-extended": "^1.2.0",
+    "jest-mock-extended": "^2.0.4",
     "lint-staged": "11.1.2",
     "nx": "12.9.0",
     "prettier": "2.4.1",
