--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-KEYCLOAK_SECRET=
-SENDGRID_API_KEY=
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
+KEYCLOAK_SECRET=kc-secret
+SENDGRID_API_KEY=sendgrid-key
+STRIPE_SECRET_KEY=stripe-key
+STRIPE_WEBHOOK_SECRET=stripe-secret
