upgraded prisma to latest

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@nestjs/swagger": "5.1.5",
     "@nestjs/terminus": "8.0.4",
     "@ntegral/nestjs-sentry": "3.0.6",
-    "@prisma/client": "3.4.1",
+    "@prisma/client": "^3.8.0",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.14.1",
     "class-transformer": "0.4.0",
@@ -78,8 +78,8 @@
     "lint-staged": "11.1.2",
     "nx": "12.9.0",
     "prettier": "2.4.1",
-    "prisma": "^3.3.0",
-    "prisma-dbml-generator": "0.8.0",
+    "prisma": "^3.8.0",
+    "prisma-dbml-generator": "^0.8.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
     "typescript": "4.3.5"
