--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/jest": "27.0.1",
     "@types/mjml": "^4.7.0",
     "@types/node": "16.9.1",
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "~4.31.2",
     "@typescript-eslint/parser": "~4.31.2",
     "@vegardit/prisma-generator-nestjs-dto": "^1.4.0",
