--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,21 @@ Thumbs.db
 .history/.env_20220119141622
 .history/.env_20220121114716
 .history/.env_20220121114721
+.history/apps/api/src/campaign/campaign.service_20220202185033.ts
+.history/apps/api/src/campaign/campaign.controller_20220202185033.ts
+.history/apps/api/src/campaign/campaign.controller_20220202185621.ts
+.history/apps/api/src/campaign/campaign.controller_20220202185643.ts
+.history/apps/api/src/campaign/campaign.service_20220202185033.ts
+.history/apps/api/src/campaign/campaign.service_20220202185733.ts
+.history/apps/api/src/campaign/campaign.service_20220202185744.ts
+.history/apps/api/tsconfig.app_20220202003617.json
+.history/apps/api/src/campaign/campaign.controller_20220202185033.ts
+.history/apps/api/src/campaign/campaign.controller_20220202185621.ts
+.history/apps/api/src/campaign/campaign.controller_20220202185643.ts
+.history/apps/api/src/campaign/campaign.service_20220202185033.ts
+.history/apps/api/src/campaign/campaign.service_20220202185733.ts
+.history/apps/api/src/campaign/campaign.service_20220202185744.ts
+.history/apps/api/tsconfig.app_20220202003617.json
+.history/apps/api/tsconfig.app_20220202183918.json
+.history/apps/api/tsconfig_20220202180958.json
+.history/apps/api/tsconfig_20220202183921.json
