--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "studio": "yarn prisma studio",
     "release": "./manifests/release.sh",
     "release:patch": "./manifests/release.sh patch",
-    "postversion": "./manifests/postrelease.sh v$npm_package_version"
+    "postversion": "./manifests/postrelease.sh v$npm_package_version",
+    "push": "git push api PepiPetrov"
   },
   "dependencies": {
     "@golevelup/nestjs-stripe": "0.2.2",
