--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,5 @@ KEYCLOAK_SECRET=kc-secret
 SENDGRID_API_KEY=sendgrid-key
 STRIPE_SECRET_KEY=stripe-key
 STRIPE_WEBHOOK_SECRET=stripe-secret
+S3_ACCESS_KEY=s3-access-key
+S3_SECRET_ACCESS_KEY=s3-secret-access-key
