--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@prisma/client": "^3.10.0",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.14.1",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1086.0",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "handlebars": "4.7.7",
