--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/faker": "^5.5.9",
     "@types/jest": "27.0.1",
     "@types/mjml": "^4.7.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "16.9.1",
     "@typescript-eslint/eslint-plugin": "~4.31.2",
     "@typescript-eslint/parser": "~4.31.2",
