--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-KEYCLOAK_SECRET=99043b92-c337-4869-8a3c-09822db0fd6c
+KEYCLOAK_SECRET=
 SENDGRID_API_KEY=sendgrid-key
 STRIPE_SECRET_KEY=stripe-key
 STRIPE_WEBHOOK_SECRET=stripe-secret
