--- a/.env
+++ b/.env
@@ -28,6 +28,13 @@ DB_NAME=postgres
 ## Local prisma db url
 DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
+## S3 ##
+########
+S3_ENDPOINT=https://cdn-dev.podkrepi.bg
+S3_BUCKET=campaign-files
+S3_ACCESS_KEY=
+S3_SECRET_ACCESS_KEY=
+
 ## Keycloak ##
 ##############
 KEYCLOAK_URL=https://keycloak.podkrepi.bg/auth
