--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@prisma/client": "^3.10.0",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.14.1",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1086.0",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "handlebars": "4.7.7",
@@ -65,6 +67,7 @@
     "@types/faker": "^5.5.9",
     "@types/jest": "27.0.1",
     "@types/mjml": "^4.7.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "16.9.1",
     "@typescript-eslint/eslint-plugin": "~4.31.2",
     "@typescript-eslint/parser": "~4.31.2",
