--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "helmet": "4.6.0",
     "joi": "17.4.2",
     "keycloak-connect": "15.0.2",
+    "mime-types": "^2.1.35",
     "mjml": "4.10.4",
     "nest-keycloak-connect": "1.7.6",
     "reflect-metadata": "0.1.13",
@@ -66,6 +67,7 @@
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/jest": "27.0.1",
+    "@types/mime-types": "^2.1.1",
     "@types/mjml": "^4.7.0",
     "@types/multer": "^1.4.7",
     "@types/node": "16.9.1",
