Migrate NX to version 13

--- a/nx.json
+++ b/nx.json
@@ -26,12 +26,8 @@
       }
     ]
   },
-  "projects": {
-    "api": {
-      "tags": []
-    },
-    "podkrepi-types": {
-      "tags": []
-    }
-  }
+  "cli": {
+    "defaultCollection": "@nrwl/nest"
+  },
+  "defaultProject": "api"
 }
