--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           node-version: '16'
           cache: 'yarn'
+      - name: Run database
+        run: docker-compose up -d pg-db
       - run: yarn
       - name: Generate Prisma DB client
         run: yarn prisma generate
