make sure the database is migrated after it is started in the workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,8 @@ jobs:
       - run: yarn
       - name: Generate Prisma DB client
         run: yarn prisma generate
+      - name: Migrate database
+        run: yarn prisma migrate deploy
       - name: NX Test API # https://github.com/marketplace/actions/nrwl-nx
         uses: MansaGroup/nrwl-nx-action@v2
         with:
