run tests sequentially

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "yarn nx serve",
     "build": "yarn nx build",
     "build-all": "yarn nx run-many --target build --all --parallel",
-    "test": "yarn nx run-many --target test --all",
-    "test:changed": "yarn nx test --watch --onlyChanged",
+    "test": "yarn nx run-many --target test --all --runInBand",
+    "test:changed": "yarn nx test --watch --onlyChanged --runInBand",
     "stripe:listen-webhook": "stripe listen --forward-to localhost:5010/api/stripe/webhook",
     "format": "nx format affected",
     "migrate": "yarn prisma migrate deploy",
