--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,5 +31,11 @@ jobs:
       - name: NX Test API # https://github.com/marketplace/actions/nrwl-nx
         uses: MansaGroup/nrwl-nx-action@v2
         with:
-          targets: lint,test,build
+          targets: lint,build
           projects: api
+      - name: Jest coverage report
+        uses: ArtiomTr/jest-coverage-report-action@v2.0.5
+        with:
+          package-manager: yarn
+          github-token: ${{ secrets.DEVOPS_PACKAGES_TOKEN }}
+          test-script: yarn test:ci
