Add sendgrid/client package, add sendgrid contacts url in config

--- a/.env
+++ b/.env
@@ -53,6 +53,7 @@ SENTRY_SERVER_ROOT_DIR=/app
 SENDGRID_API_KEY=
 SENDGRID_SENDER_EMAIL=info@podkrepi.bg
 SENDGRID_INTERNAL_EMAIL=dev@podkrepi.bg
+SENDGRID_CONTACTS_URL=/v3/marketing/contacts
 
 ## Stripe
 STRIPE_SECRET_KEY=
