api Cannot validate access token: Error: 401:Unauthorized

--- a/.env
+++ b/.env
@@ -37,8 +37,8 @@ S3_SECRET_ACCESS_KEY=
 
 ## Keycloak ##
 ##############
-KEYCLOAK_URL=https://keycloak.podkrepi.bg/auth
-KEYCLOAK_REALM=webapp-dev
+KEYCLOAK_URL=http://localhost:9080/auth
+KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=
 
