--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,17 @@ services:
     networks:
       - backend-net
 
+  postgresql:
+    image: docker.io/bitnami/postgresql
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - POSTGRESQL_USERNAME=bn_keycloak
+      - POSTGRESQL_DATABASE=bitnami_keycloak
+    volumes:
+      - 'postgresql_data:/bitnami/postgresql'
+    ports:
+      - 5433:5432
+
   keycloak:
     container_name: keycloak
     image: docker.io/bitnami/keycloak:15
@@ -69,38 +80,22 @@ services:
       - DEBUG=true
       - DEBUG_PORT='*:8787'
       - DB_VENDOR=POSTGRES
-      - DB_ADDR=pg-db
+      - DB_ADDR=postgresql
       - DB_PORT=5432
-      - DB_DATABASE=${DB_NAME?}
-      - DB_USER=${DB_USER?}
-      - DB_PASSWORD=${DB_PASS?}
+      - DB_DATABASE=bitnami_keycloak
+      - DB_USER=bn_keycloak
       - TZ=Europe/Sofia
     depends_on:
-      - pg-db
+      - postgresql
     ports:
-      - '9080:8080'
-      - '8787:8787' # debug port
-    networks:
-      - backend-net
-
-  # Flyway is deprecated, Prisma migrations are taking place
-  # flyway:
-  #   build:
-  #     context: ./db
-  #     dockerfile: ./flyway/Dockerfile
-  #   container_name: ${COMPOSE_PROJECT_NAME?}-flyway
-  #   hostname: flyway
-  #   # https://flywaydb.org/documentation/configuration/configfile#reference
-  #   # jdbc:postgresql://<host>:<port>/<database>?<key1>=<value1>&<key2>=<value2>...
-  #   command: migrate
-  #   entrypoint: flyway -url=jdbc:postgresql://${DB_HOST?}:${DB_PORT?}/${DB_NAME?} -schemas=app,campaign,account -user=${DB_USER?} -password=${DB_PASS?} -connectRetries=60
-  #   depends_on:
-  #     - pg-db
-  #   networks:
-  #     - backend-net
+      - '8180:8080'
+      - '8787:8787'
+    volumes:
+      - './theme_podkrepi:/opt/bitnami/keycloak/themes/theme_podkrepi'
 
 volumes:
   pg-db-data:
+  postgresql_data:
     driver: local
 
 networks:
