updated the docker-compose to import webapp.realm json automatically added the imported secret in .env file to avoid manual copy the only manual effort is to register user through frontend or Admin UI

--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ S3_SECRET_ACCESS_KEY=
 KEYCLOAK_URL=http://localhost:8180/auth
 KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
-KEYCLOAK_SECRET=
+KEYCLOAK_SECRET=DEV-KEYCLOAK-SECRET
 
 ## Sentry.io
 SENTRY_DSN=https://58b71cdea21f45c0bcbe5c1b49317973@o540074.ingest.sentry.io/5707518
