--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,44 +62,47 @@ services:
 
     ## Postgres Keycloak ##
   ##########################
-  postgresql:
-    image: docker.io/bitnami/postgresql
+  keycloak-db:
+    container_name: ${COMPOSE_PROJECT_NAME?}-keycloak-db
+    image: docker.io/bitnami/postgresql:13
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
       - POSTGRESQL_USERNAME=bn_keycloak
       - POSTGRESQL_DATABASE=bitnami_keycloak
     volumes:
-      - 'postgresql_data:/bitnami/postgresql'
-    ports:
-      - 5433:5432
+      - 'keycloak-db-data:/bitnami/postgresql'
+    networks:
+      backend-net:
 
     ## Local Keycloak ##
   ##########################
   keycloak:
-    container_name: keycloak
+    container_name: ${COMPOSE_PROJECT_NAME?}-keycloak
     image: docker.io/bitnami/keycloak:15
     environment:
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
+      - KEYCLOAK_EXTRA_ARGS=-Dkeycloak.import=/opt/bitnami/keycloak/config/keycloak-webapp-realm.json
       - DEBUG=true
       - DEBUG_PORT='*:8787'
       - DB_VENDOR=POSTGRES
-      - DB_ADDR=postgresql
-      - DB_PORT=5432
+      - DB_ADDR=${COMPOSE_PROJECT_NAME?}-keycloak-db
       - DB_DATABASE=bitnami_keycloak
       - DB_USER=bn_keycloak
       - TZ=Europe/Sofia
     depends_on:
-      - postgresql
+      - keycloak-db
     ports:
       - '8180:8080'
       - '8787:8787'
     volumes:
-      - './theme_podkrepi:/opt/bitnami/keycloak/themes/theme_podkrepi'
-
+      - './manifests/keycloak/theme_podkrepi:/opt/bitnami/keycloak/themes/theme_podkrepi'
+      - './manifests/keycloak/config:/opt/bitnami/keycloak/config'
+    networks:
+      backend-net:
 volumes:
   pg-db-data:
-  postgresql_data:
+  keycloak-db-data:
     driver: local
 
 networks:
