--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 services:
   api:
     image: podkrepi-api
+    profiles: ['api-docker']
     build:
       context: .
       dockerfile: ./Dockerfile
