Extract keycloak env vars and add docker-compose profile for local-keycloak

--- a/.env
+++ b/.env
@@ -42,6 +42,11 @@ KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=DEV-KEYCLOAK-SECRET
 
+## Keycloak Server ##
+#####################
+KEYCLOAK_USER=admin
+KEYCLOAK_PASSWORD=admin
+
 ## Sentry.io
 SENTRY_DSN=https://58b71cdea21f45c0bcbe5c1b49317973@o540074.ingest.sentry.io/5707518
 SENTRY_ORG=podkrepibg
