Update keycloak and other dependencies

--- a/package.json
+++ b/package.json
@@ -23,37 +23,36 @@
     "postversion": "./manifests/postrelease.sh v$npm_package_version"
   },
   "dependencies": {
-    "@golevelup/nestjs-stripe": "0.2.2",
-    "@golevelup/nestjs-webhooks": "0.2.11",
-    "@keycloak/keycloak-admin-client": "15.0.2",
-    "@nestjs/cli": "8.2.3",
-    "@nestjs/common": "8.2.5",
-    "@nestjs/config": "1.1.6",
-    "@nestjs/core": "8.2.5",
-    "@nestjs/platform-express": "8.2.5",
-    "@nestjs/swagger": "5.1.5",
-    "@nestjs/terminus": "8.0.4",
+    "@golevelup/nestjs-stripe": "0.3.3",
+    "@golevelup/nestjs-webhooks": "0.2.12",
+    "@keycloak/keycloak-admin-client": "18.0.0",
+    "@nestjs/cli": "8.2.5",
+    "@nestjs/common": "8.4.5",
+    "@nestjs/config": "2.0.0",
+    "@nestjs/core": "8.4.5",
+    "@nestjs/platform-express": "8.4.5",
+    "@nestjs/swagger": "5.2.1",
+    "@nestjs/terminus": "8.0.6",
     "@ntegral/nestjs-sentry": "3.0.6",
-    "@prisma/client": "^3.13.0",
-    "@sendgrid/client": "^7.6.2",
+    "@prisma/client": "3.14.0",
+    "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
-    "@sentry/node": "6.14.1",
-    "@types/aws-sdk": "^2.7.0",
-    "aws-sdk": "^2.1086.0",
-    "class-transformer": "0.4.0",
-    "class-validator": "0.13.1",
+    "@sentry/node": "6.19.7",
+    "aws-sdk": "2.1135.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "handlebars": "4.7.7",
-    "helmet": "4.6.0",
-    "joi": "17.4.2",
-    "keycloak-connect": "15.0.2",
-    "mjml": "4.10.4",
-    "nest-keycloak-connect": "1.7.6",
+    "helmet": "5.0.2",
+    "joi": "17.6.0",
+    "keycloak-connect": "18.0.0",
+    "mjml": "4.12.0",
+    "nest-keycloak-connect": "1.8.3",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.4.0",
-    "short-unique-id": "^4.4.4",
-    "stripe": "8.186.1",
-    "swagger-ui-express": "4.3.0",
-    "tslib": "2.3.1"
+    "rxjs": "7.5.5",
+    "short-unique-id": "4.4.4",
+    "stripe": "9.1.0",
+    "swagger-ui-express": "4.4.0",
+    "tslib": "2.4.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "8.0.5",
@@ -66,27 +65,27 @@
     "@nrwl/node": "13.9.3",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "13.9.3",
-    "@types/express": "^4.17.13",
-    "@types/faker": "^5.5.9",
+    "@types/express": "4.17.13",
+    "@types/faker": "5.5.9",
     "@types/jest": "27.0.2",
-    "@types/mjml": "^4.7.0",
-    "@types/multer": "^1.4.7",
+    "@types/mjml": "4.7.0",
+    "@types/multer": "1.4.7",
     "@types/node": "16.9.1",
     "@typescript-eslint/eslint-plugin": "5.10.2",
     "@typescript-eslint/parser": "5.10.2",
-    "@vegardit/prisma-generator-nestjs-dto": "^1.4.0",
+    "@vegardit/prisma-generator-nestjs-dto": "1.4.0",
     "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
-    "faker": "^5.5.3",
+    "faker": "5.5.3",
     "husky": "7.0.2",
     "jest": "27.2.3",
-    "jest-extended": "^1.2.0",
-    "jest-mock-extended": "^2.0.4",
+    "jest-extended": "1.2.0",
+    "jest-mock-extended": "2.0.4",
     "lint-staged": "11.1.2",
     "nx": "13.9.3",
     "prettier": "2.6.0",
-    "prisma": "^3.13.0",
-    "prisma-dbml-generator": "^0.8.0",
+    "prisma": "3.14.0",
+    "prisma-dbml-generator": "0.9.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
     "typescript": "4.3.5"
