Changed the default value for verify_email to false

--- a/manifests/keycloak/config/keycloak-webapp-realm.json
+++ b/manifests/keycloak/config/keycloak-webapp-realm.json
@@ -2446,7 +2446,7 @@
       "name": "Verify Email",
       "providerId": "VERIFY_EMAIL",
       "enabled": true,
-      "defaultAction": true,
+      "defaultAction": false,
       "priority": 50,
       "config": {}
     },
