--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@golevelup/nestjs-stripe": "0.3.3",
     "@golevelup/nestjs-webhooks": "0.2.12",
     "@keycloak/keycloak-admin-client": "18.0.0",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/cli": "8.2.5",
     "@nestjs/common": "8.4.5",
     "@nestjs/config": "2.0.0",
