Added current ingress as manifest patch

--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: podkrepibg-dev
 
 resources:
+  - ingress.yaml
   - keycloak-config.yaml
   - sendgrid-config.yaml
   - sentry-config.yaml
