--- a/manifests/overlays/development/kustomization.yaml
+++ b/manifests/overlays/development/kustomization.yaml
@@ -10,6 +10,13 @@ patches:
   - path: keycloak-config.patch.yaml
   - path: deployment.patch.yaml
 
+patchesJson6902:
+  - target:
+      version: v1
+      kind: Ingress
+      name: web
+    path: ingress.patch.yaml
+
 images:
   - name: ghcr.io/podkrepi-bg/api/migrations
     newTag: master
