--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "yarn nx run-many --target test --all",
     "test:ci": "yarn prisma generate && yarn jest",
     "test:changed": "yarn nx test --watch --onlyChanged",
-    "stripe:listen-webhook": "stripe listen --forward-to localhost:5010/api/stripe/webhook",
+    "stripe:listen-webhook": "stripe listen --forward-to localhost:5010/api/v1/stripe/webhook",
     "format": "nx format affected",
     "migrate": "yarn prisma migrate deploy",
     "generate-schema": "yarn prisma generate && yarn format",
