--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ S3_SECRET_ACCESS_KEY=
 
 ## Keycloak ##
 ##############
-KEYCLOAK_URL=http://localhost:8180/auth
+KEYCLOAK_URL=http://localhost:8180
 KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=DEV-KEYCLOAK-SECRET
