--- a/manifests/overlays/development/keycloak-config.patch.yaml
+++ b/manifests/overlays/development/keycloak-config.patch.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: keycloak-config
 data:
-  url: https://keycloak-dev.podkrepi.bg/auth
+  url: https://keycloak-dev.podkrepi.bg
   realm: webapp-dev
