fixed: yarn test to call all tests via yarn jest

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "start": "yarn nx serve",
     "build": "yarn nx build",
     "build-all": "yarn nx run-many --target build --all --parallel",
-    "test": "yarn nx run-many --target test --all",
+    "test": "yarn prisma generate && yarn jest",
     "test:ci": "yarn prisma generate && yarn jest",
-    "test:changed": "yarn nx test --watch --onlyChanged",
+    "test:changed": "yarn jest --onlyChanged",
     "stripe:listen-webhook": "stripe listen --forward-to localhost:5010/api/v1/stripe/webhook",
     "format": "nx format affected",
     "migrate": "yarn prisma migrate deploy",
