--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.19.7",
-    "aws-sdk": "2.1135.0",
+    "aws-sdk": "^2.1135.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "handlebars": "4.7.7",
     "helmet": "5.0.2",
     "joi": "17.6.0",
-    "keycloak-connect": "18.0.0",
+    "keycloak-connect": "^18.0.0",
     "mjml": "4.12.0",
-    "nest-keycloak-connect": "1.8.3",
+    "nest-keycloak-connect": "^1.8.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5",
-    "short-unique-id": "4.4.4",
-    "stripe": "9.1.0",
-    "swagger-ui-express": "4.4.0",
+    "short-unique-id": "^4.4.4",
+    "stripe": "^9.1.0",
+    "swagger-ui-express": "^4.4.0",
     "tslib": "2.4.0"
   },
   "devDependencies": {
