Added S3_BUCKET_BANK_TRANSACTION as env

--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -65,6 +65,8 @@ spec:
                   key: url
             - name: S3_BUCKET
               value: campaign-files
+            - name: S3_BUCKET_BANK_TRANSACTION
+              value: banktransactions-files
             - name: KEYCLOAK_URL
               valueFrom:
                 configMapKeyRef:
