--- a/.env
+++ b/.env
@@ -33,6 +33,7 @@ DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 S3_ENDPOINT=https://cdn-dev.podkrepi.bg
 S3_ACCESS_KEY=
 S3_SECRET_ACCESS_KEY=
+S3_BUCKET_BANK_TRANSACTION=banktransactions-files
 
 ## Keycloak ##
 ##############
