--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@nestjs/swagger": "5.2.1",
     "@nestjs/terminus": "8.0.6",
     "@ntegral/nestjs-sentry": "3.0.6",
-    "@prisma/client": "3.14.0",
+    "@prisma/client": "^3.15.2",
     "@sendgrid/client": "7.6.2",
     "@sendgrid/mail": "7.6.0",
     "@sentry/node": "6.19.7",
@@ -48,10 +48,10 @@
     "joi": "17.6.0",
     "keycloak-connect": "^18.0.0",
     "mjml": "4.12.0",
+    "nanoid": "^3.3.4",
     "nest-keycloak-connect": "^1.8.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5",
-    "nanoid": "^3.3.4",
     "stripe": "^9.1.0",
     "swagger-ui-express": "^4.4.0",
     "tslib": "2.4.0"
@@ -86,7 +86,7 @@
     "lint-staged": "11.1.2",
     "nx": "13.9.3",
     "prettier": "2.6.0",
-    "prisma": "3.14.0",
+    "prisma": "^3.15.2",
     "prisma-dbml-generator": "0.9.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
