--- a/manifests/overlays/production/kustomization.yaml
+++ b/manifests/overlays/production/kustomization.yaml
@@ -13,14 +13,14 @@ patches:
 
 images:
   - name: ghcr.io/podkrepi-bg/api
-    newTag: v0.3.5
+    newTag: v0.4.0
   - name: ghcr.io/podkrepi-bg/api/migrations
-    newTag: v0.3.5
+    newTag: v0.4.0
 
 secretGenerator:
-  - name: stripe-secret
-    envs: [stripe.env]
-  - name: keycloak-secret
-    envs: [keycloak-secret.env]
-  - name: sendgrid-secret
-    envs: [sendgrid-secret.env]
+#  - name: stripe-secret
+#    envs: [stripe.env]
+#  - name: keycloak-secret
+#    envs: [keycloak-secret.env]
+#  - name: sendgrid-secret
+#    envs: [sendgrid-secret.env]
