--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -32,11 +32,11 @@ spec:
           imagePullPolicy: Always
           resources:
             limits:
-              memory: 512Mi
-              cpu: '1'
+              memory: 500Mi
+              cpu: 500m
             requests:
-              memory: 256Mi
-              cpu: '0.2'
+              memory: 350Mi
+              cpu: 200m
           ports:
             - containerPort: 80
           livenessProbe:
