--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,4 +1,4 @@
-FROM node:16-alpine3.14 as base
+FROM node:16-alpine3.16 as base
 WORKDIR /app
 
 # The @prisma/client package defines its own postinstall hook that's being
@@ -8,5 +8,7 @@ WORKDIR /app
 RUN yarn add prisma
 COPY schema.prisma .
 COPY migrations migrations/
+
+USER 1000:1001
 
 CMD yarn prisma migrate deploy
