--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -14,10 +14,21 @@ spec:
       labels:
         app: api-headless
     spec:
+      automountServiceAccountToken: false
       initContainers:
         - name: migrate-database
           image: ghcr.io/podkrepi-bg/api/migrations
           imagePullPolicy: Always
+          securityContext:
+            runAsNonRoot: true
+            readOnlyRootFilesystem: true
+          resources:
+            limits:
+              memory: 200Mi
+              cpu: 200m
+            requests:
+              memory: 150Mi
+              cpu: 150m
           env:
             - name: NODE_ENV
               value: production
@@ -30,6 +41,9 @@ spec:
         - name: api-headless
           image: ghcr.io/podkrepi-bg/api
           imagePullPolicy: Always
+          securityContext:
+            runAsNonRoot: true
+            readOnlyRootFilesystem: true
           resources:
             limits:
               memory: 500Mi
