--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -9,6 +9,11 @@ spec:
   selector:
     matchLabels:
       app: api-headless
+  strategy:
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
+    type: RollingUpdate
   template:
     metadata:
       labels:
