--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -80,6 +80,9 @@ jobs:
     name: Release to dev
     runs-on: ubuntu-latest
     needs: [build-api-docker-image, build-migrations-docker-image]
+    environment:
+      name: dev
+      url: https://dev.podkrepi.bg
     steps:
       - uses: actions/checkout@v3
 
