--- a/manifests/overlays/development/kustomization.yaml
+++ b/manifests/overlays/development/kustomization.yaml
@@ -7,19 +7,11 @@ bases:
   - ../../base
 
 patches:
-  - path: keycloak-config.patch.yaml
-  - path: deployment.patch.yaml
+- path: manual/keycloak-config.patch.yaml
+- path: manual/deployment.patch.yaml
 
 images:
-  - name: ghcr.io/podkrepi-bg/api/migrations
-    newTag: master
-  - name: ghcr.io/podkrepi-bg/api
-    newTag: master
-
-#secretGenerator:
-#  - name: stripe-secret
-#    envs: [stripe.env]
-#  - name: keycloak-secret
-#    envs: [keycloak-secret.env]
-#  - name: sendgrid-secret
-#    envs: [sendgrid-secret.env]
+- name: ghcr.io/podkrepi-bg/api
+  newTag: master
+- name: ghcr.io/podkrepi-bg/api/migrations
+  newTag: master
