--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -156,7 +156,7 @@ jobs:
           kustomize edit set image ghcr.io/podkrepi-bg/api/migrations=ghcr.io/podkrepi-bg/api/migrations:$VERSION
 
       - name: Set kubeconfig
-        run: echo ${{ secrets.K8S_DEV_CONFIG }} | base64 -d > config.yaml
+        run: echo ${{ secrets.K8S_CONFIG }} | base64 -d > config.yaml
 
       - name: Apply new manifests
         run: kubectl apply -k manifests/overlays/production --kubeconfig config.yaml
